[package]
name = "test-format"
version = "0.1.0"
description = """
Provides the assert_debug_fmt and assert_display_fmt macros for testing Debug (or Display) implementations on no_std
"""
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "EUPL-1.2 OR Apache-2.0 OR MIT"
homepage = "https://github.com/sunsided/test-format"
repository = "https://github.com/sunsided/test-format"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
categories = ["no-std", "development-tools::debugging"]
keywords = ["format", "debug", "display"]

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
